Http access the transport but cannot get the expected string.

--- a/TestThrift/ConsoleApplication2.vcxproj
+++ b/TestThrift/ConsoleApplication2.vcxproj
@@ -41,7 +41,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\wsds\Documents\Visual Studio 2013\Projects\ConsoleApplication2\thrift\gen-cpp;$(IncludePath)</IncludePath>
+    <IncludePath>F:\boost_1_55_0\Pre-built.2\include;F:\boost_1_55_0\libevent-2.0.21-stable;F:\boost_1_55_0\zlib125\zlib-1.2.5;F:\boost_1_55_0\boost_1_55_0;E:\codespace\android\hsrl\TestThrift\thrift\gen-cpp;$(IncludePath)</IncludePath>
+    <LibraryPath>F:\boost_1_55_0\boost_1_55_0\stage\lib;F:\boost_1_55_0\Pre-built.2\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -88,64 +89,22 @@
     <ClInclude Include="thrift\gen-cpp\shell_server.skeleton.h" />
     <ClInclude Include="thrift\gen-cpp\test_constants.h" />
     <ClInclude Include="thrift\gen-cpp\test_types.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\concurrency\BoostThreadFactory.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\concurrency\Exception.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\concurrency\FunctionRunner.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\concurrency\Monitor.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\concurrency\Mutex.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\concurrency\PlatformThreadFactory.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\concurrency\PosixThreadFactory.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\concurrency\StdThreadFactory.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\concurrency\Thread.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\concurrency\ThreadManager.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\concurrency\TimerManager.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\concurrency\Util.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\cxxfunctional.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\protocol\TBase64Utils.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\protocol\TBinaryProtocol.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\protocol\TCompactProtocol.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\protocol\TDebugProtocol.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\protocol\TDenseProtocol.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\protocol\TJSONProtocol.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\protocol\TMultiplexedProtocol.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\protocol\TProtocol.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\protocol\TProtocolDecorator.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\protocol\TProtocolException.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\protocol\TProtocolTap.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\protocol\TVirtualProtocol.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\server\TNonblockingServer.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\server\TServer.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\server\TSimpleServer.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\server\TThreadedServer.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\server\TThreadPoolServer.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\TApplicationException.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\TDispatchProcessor.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\thrift-config.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\Thrift.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\TLogging.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\TProcessor.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\PlatformSocket.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\transport\TBufferTransports.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\TFDTransport.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\TFileTransport.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\THttpClient.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\transport\THttpServer.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\transport\THttpTransport.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\TPipe.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\TPipeServer.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\transport\TServerSocket.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\TServerTransport.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\TShortReadTransport.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\TSimpleFileTransport.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\transport\TSocket.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\TSocketPool.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\TSSLServerSocket.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\TSSLSocket.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\TTransport.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\TTransportException.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\TTransportUtils.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\TVirtualTransport.h" />
-    <ClInclude Include="thrift\gen-cpp\thrift\transport\TZlibTransport.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\TReflectionLocal.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\windows\config.h" />
     <ClInclude Include="thrift\gen-cpp\thrift\windows\force_inc.h" />
@@ -165,47 +124,16 @@
     <ClCompile Include="thrift\gen-cpp\shell_server.skeleton.cpp" />
     <ClCompile Include="thrift\gen-cpp\test_constants.cpp" />
     <ClCompile Include="thrift\gen-cpp\test_types.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\concurrency\BoostMonitor.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\concurrency\BoostMutex.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\concurrency\BoostThreadFactory.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\concurrency\Monitor.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\concurrency\Mutex.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\concurrency\PosixThreadFactory.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\concurrency\StdMonitor.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\concurrency\StdMutex.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\concurrency\StdThreadFactory.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\concurrency\ThreadManager.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\concurrency\TimerManager.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\concurrency\Util.cpp" />
     <ClCompile Include="thrift\gen-cpp\thrift\protocol\TBase64Utils.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\protocol\TDebugProtocol.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\protocol\TDenseProtocol.cpp" />
     <ClCompile Include="thrift\gen-cpp\thrift\protocol\TJSONProtocol.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\protocol\TMultiplexedProtocol.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\server\TNonblockingServer.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\server\TServer.cpp" />
     <ClCompile Include="thrift\gen-cpp\thrift\server\TSimpleServer.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\server\TThreadedServer.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\server\TThreadPoolServer.cpp" />
     <ClCompile Include="thrift\gen-cpp\thrift\TApplicationException.cpp" />
     <ClCompile Include="thrift\gen-cpp\thrift\Thrift.cpp" />
     <ClCompile Include="thrift\gen-cpp\thrift\transport\TBufferTransports.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\transport\TFDTransport.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\transport\TFileTransport.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\transport\THttpClient.cpp" />
     <ClCompile Include="thrift\gen-cpp\thrift\transport\THttpServer.cpp" />
     <ClCompile Include="thrift\gen-cpp\thrift\transport\THttpTransport.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\transport\TPipe.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\transport\TPipeServer.cpp" />
     <ClCompile Include="thrift\gen-cpp\thrift\transport\TServerSocket.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\transport\TSimpleFileTransport.cpp" />
     <ClCompile Include="thrift\gen-cpp\thrift\transport\TSocket.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\transport\TSocketPool.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\transport\TSSLServerSocket.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\transport\TSSLSocket.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\transport\TTransportException.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\transport\TTransportUtils.cpp" />
-    <ClCompile Include="thrift\gen-cpp\thrift\transport\TZlibTransport.cpp" />
     <ClCompile Include="thrift\gen-cpp\thrift\VirtualProfiling.cpp" />
     <ClCompile Include="thrift\gen-cpp\thrift\windows\GetTimeOfDay.cpp" />
     <ClCompile Include="thrift\gen-cpp\thrift\windows\SocketPair.cpp" />
