--- a/ThriftProject/server/server.vcxproj
+++ b/ThriftProject/server/server.vcxproj
@@ -39,8 +39,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Tool\boost_1_55_0;$(SolutionDir)/src;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Tool\boost_1_55_0\stage\lib;$(SolutionDir)/Debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(BOOST_HOME);$(SolutionDir)/src;$(IncludePath)</IncludePath>
+    <LibraryPath>$(BOOST_HOME)\stage\lib;$(SolutionDir)/Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
