The interpreter could call the integrated function "log"

--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -84,13 +84,16 @@
     <ClInclude Include="data_core\base\List.h" />
     <ClInclude Include="data_core\base\MemoryManagement.h" />
     <ClInclude Include="data_core\data_core.h" />
-    <ClInclude Include="data_core\JSInstance.h" />
     <ClInclude Include="data_core\JSKeyValue.h" />
     <ClInclude Include="data_core\JSNumber.h" />
     <ClInclude Include="data_core\JSON.h" />
     <ClInclude Include="data_core\JSString.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="swift\FunctionsClosures\Closure.h" />
+    <ClInclude Include="swift\interface\Import.h" />
+    <ClInclude Include="swift\interface\JSClass.h" />
+    <ClInclude Include="swift\interface\JSFunction.h" />
+    <ClInclude Include="swift\interface\JSInstance.h" />
     <ClInclude Include="swift\interface\log.h" />
     <ClInclude Include="swift\interpret_main.h" />
     <ClInclude Include="swift\SimpleValues\Assign.h" />
@@ -103,13 +106,16 @@
     <ClCompile Include="data_core\base\JSObject.cpp" />
     <ClCompile Include="data_core\base\List.cpp" />
     <ClCompile Include="data_core\base\MemoryManagement.cpp" />
-    <ClCompile Include="data_core\JSInstance.cpp" />
     <ClCompile Include="data_core\JSKeyValue.cpp" />
     <ClCompile Include="data_core\JSNumber.cpp" />
     <ClCompile Include="data_core\JSON.cpp" />
     <ClCompile Include="data_core\JSString.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="swift\FunctionsClosures\Closure.cpp" />
+    <ClCompile Include="swift\interface\Import.cpp" />
+    <ClCompile Include="swift\interface\JSClass.cpp" />
+    <ClCompile Include="swift\interface\JSFunction.cpp" />
+    <ClCompile Include="swift\interface\JSInstance.cpp" />
     <ClCompile Include="swift\interface\log.cpp" />
     <ClCompile Include="swift\interpret_main.cpp" />
     <ClCompile Include="swift\SimpleValues\Assign.cpp" />
