Changed some configuration

--- a/ConsoleApplication1/libthrift/libthrift.vcxproj
+++ b/ConsoleApplication1/libthrift/libthrift.vcxproj
@@ -50,10 +50,14 @@
       </SDLCheck>
       <PreprocessorDefinitions>_WIN32;WIN32;_DEBUG;_LIB;HAVE_CONFIG_H;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ForcedIncludeFiles>thrift\windows\force_inc.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <AdditionalIncludeDirectories>$(ProjectDir)/src/thrift/windows;$(ProjectDir)/src;$(BOOST_HOME);</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <Lib>
+      <AdditionalLibraryDirectories>$(BOOST_HOME)/stage/lib;$(LibraryPath)</AdditionalLibraryDirectories>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
